# Aegis11

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  aegis_wal.json  build.bat
include/CLI/: ArgumentParser.hpp  InteractiveMenu.hpp
include/Core/: Logger.hpp  Obfuscation.hpp  PolicyEngine.hpp  ProcessHost.hpp  RAII.hpp  State.hpp  StateEngine.hpp  SysInfo.hpp  Utils.hpp
include/Modules/: AppxManager.hpp  CopilotManager.hpp  DataPurge.hpp  EdgeManager.hpp  FirewallManager.hpp  NetworkOptimizer.hpp  NetworkSinkhole.hpp  NetworkWfp.hpp  RegistryManager.hpp  Reinforcement.hpp  ServiceManager.hpp  TaskManager.hpp
include/Support/: MathHardener.hpp
include/UI/: InteractiveShell.hpp
resources/: aegis.manifest  aegis.rc
scripts/: TrustAndLaunch.ps1
src/: main.cpp
